--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "script-loader": "0.7.2",
     "sortablejs": "1.8.4",
     "tui-editor": "1.3.3",
+    "v-distpicker": "^1.2.8",
     "vue": "2.6.10",
     "vue-count-to": "1.0.13",
     "vue-quill-editor": "^3.0.6",
